# BDTB

./: .gitignore  pyproject.toml  requirements.txt  run_dashboard.py
.streamlit/: config.toml
docs/plans/: 2026-02-28-forex-trading-bot-design.md  2026-02-28-forex-trading-bot-implementation.md  2026-02-28-mt5-integration.md  2026-02-28-oanda-integration.md  2026-03-01-binance-integration.md
src/trader/: __init__.py  backtester.py  cache.py  cli.py  dashboard.py  data_fetcher.py  indicators.py  mt5_backtester.py  mt5_client.py  mt5_trader.py  oanda_client.py  paper_trader.py  patterns.py  predictor.py  signals.py  support_resistance.py
src/trader_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_backtester.py  test_cache.py  test_data_fetcher.py  test_indicators.py  test_integration.py  test_mt5_backtester.py  test_mt5_client.py  test_mt5_trader.py  test_oanda_client.py  test_paper_trader.py  test_patterns.py  test_predictor.py  test_signals.py  test_support_resistance.py
