[project]
name = "trader-bot"
version = "0.1.0"
description = "Forex trading bot with signals and predictions"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
trader = "trader.cli:main"

[tool.streamlit]
requirements = ["yfinance", "pandas", "numpy", "scikit-learn", "streamlit", "plotly", "python-dotenv"]
